# stablefmmpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
examples/: 01_benchmarks.ipynb  02_fmm_solver.ipynb  03_stability_analysis.ipynb  04_backward_error.ipynb  05_multilevel.ipynb  README.md
src/stablefmmpy/: __init__.py  analysis.py  core.py  matrices.py  solver.py  tree.py
tests/: conftest.py  test_core.py  test_matrices.py  test_solver.py  test_solver_multilevel.py  test_stability.py
