[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stablefmmpy"
version = "0.1.0"
description = "Stable wideband Fast Multipole Method for the 2D Helmholtz kernel (balanced matrix version)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Julian Pinchao", email = "pinchaoo@ualberta.ca" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter", "nbconvert"]

[tool.setuptools.packages.find]
where = ["src"]
