[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stablefmmpy"
version = "0.1.0"
description = "Stable wideband Fast Multipole Method for the 2D Helmholtz kernel (balanced matrix version)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Julian Pinchao", email = "pinchaoo@ualberta.ca" }]
requires-python = ">=3.12"
keywords = [
    "fast multipole method",
    "FMM",
    "Helmholtz",
    "numerical linear algebra",
    "scientific computing",
    "boundary integral",
    "wideband",
    "stability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter", "nbconvert"]

[project.urls]
Repository = "https://github.com/pinpacho/stablefmmpy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["examples/*.ipynb", "examples/*.py", "examples/README.md"]
